--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "regam",
-  "version": "1.0.0",
-  "description": "server code",
-  "main": "devServer.js",
-  "scripts": {
-    "start": "node devServer.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dnap512/Regam.git"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "core-js": "^3.2.1",
-    "date-utils": "^1.2.21",
-    "ejs": "~2.4.1",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "mybatis-mapper": "^0.6.3",
-    "mysql": "~2.17.1",
-    "sync-mysql": "^3.0.1",
-    "vhost": "^3.0.2"
-  }
+    "name": "regam",
+    "version": "1.0.0",
+    "description": "server code",
+    "main": "devServer.js",
+    "scripts": {
+        "start": "node devServer.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/yangseong-ho/makeBoard"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "core-js": "^3.2.1",
+        "date-utils": "^1.2.21",
+        "ejs": "~2.4.1",
+        "express": "^4.17.1",
+        "express-session": "^1.16.2",
+        "mybatis-mapper": "^0.6.3",
+        "mysql": "~2.17.1",
+        "sync-mysql": "^3.0.1",
+        "vhost": "^3.0.2"
+    }
 }
